# esp32-starter

./: .clangd  CMakeLists.txt  ctl.sh  prj.conf
.devcontainer/: devcontainer.json
src/: CMakeLists.txt  checks.c  exercises.h  exercises_c.c  exercises_zephyr.c  kv.c  kv.h  main.c  msg_helper.c  msg_helper.h
